# RururuOS

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  idea.md  mac-develop.md  todo.md
.github/workflows/: build.yml  ci.yml  iso-nightly.yml  release.yml
config/: limits.conf  packages.x86_64  sysctl.conf
config/gnome/: dconf-settings.ini  extensions.list
config/gnome/schemas/: org.rururu.creative.gschema.xml
config/kde/: kdeglobals  kglobalshortcutsrc  kwinrc
config/kde/plasmoids/org.rururu.creative/: metadata.json
config/kde/plasmoids/org.rururu.creative/contents/ui/: main.qml
config/kernel/: preempt-rt.config
config/sway/: config
config/sway/scripts/: creative-workspace.sh  screenshot.sh
config/sway/themes/: catppuccin.conf  tokyo-night.conf
config/sway/waybar/: config.jsonc  style.css
docs/: developer-guide.md  faq.md  installation-guide.md  troubleshooting.md  user-manual.md
infrastructure/community/: README.md
infrastructure/repo/: README.md
infrastructure/updates/: update-checker.sh
installer/calamares/: settings.conf
installer/calamares/branding/rururu/: branding.desc
installer/calamares/modules/: workflows.conf
installer/hardware-detect/: Cargo.toml
installer/hardware-detect/src/: audio.rs  cpu.rs  display.rs  gpu.rs  lib.rs  main.rs  memory.rs  network.rs  storage.rs
installer/post-install-wizard/: Cargo.toml
installer/post-install-wizard/src/: main.rs  wizard.rs
installer/post-install-wizard/src/pages/: apps.rs  finish.rs  hardware.rs  mod.rs  settings.rs  welcome.rs  workflow.rs
iso/: Makefile  build.sh  pacman.conf  profiledef.sh
iso/airootfs/etc/: mkinitcpio.conf
iso/airootfs/etc/modprobe.d/: rururu-audio.conf
iso/airootfs/etc/pipewire/pipewire-pulse.conf.d/: 99-rururu.conf
iso/airootfs/etc/pipewire/pipewire.conf.d/: 99-rururu.conf
iso/airootfs/etc/security/limits.d/: 99-rururu.conf
iso/airootfs/etc/skel/.config/: user-dirs.dirs
iso/airootfs/etc/sysctl.d/: 99-rururu.conf
iso/airootfs/etc/systemd/system/: rururu-file-handler.service
iso/airootfs/etc/xdg/autostart/: rururu-welcome.desktop
iso/airootfs/root/: customize_airootfs.sh
iso/arm64-asahi/: build.sh
iso/arm64-rpi/: build.sh
iso/profile/: profiledef.sh
scripts/: build-iso.sh  install-bootloader.sh  install-deps.sh  partition-disk.sh  setup-desktop.sh
tests/: README.md
tests/codecs/: compatibility.md
tests/hardware/: compatibility.md
