[workspace]
resolver = "2"
members = [
    "packages/rururu-plugin-example",
    "packages/rururu-utils",
    "packages/rururu-settings",
    "packages/rururu-monitor",
    "packages/rururu-colorcal",
    "packages/rururu-color",
    "packages/rururu-workflows",
]

# Packages requiring system libraries (ffmpeg, openexr, assimp)
# Build locally with: cargo build -p rururu-file-handler --manifest-path packages/rururu-file-handler/Cargo.toml
exclude = [
    "packages/rururu-file-handler",
    "packages/rururu-desktop",
    "packages/rururu-wrappers",
    "packages/rururu-files",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RururuOS Team"]
license = "MIT"
repository = "https://github.com/user/RururuOS"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
