[package]
name = "rururu-hardware-detect"
version = "0.1.0"
edition = "2021"
authors = ["RururuOS Team"]
license = "MIT"
description = "Hardware detection and recommendations for RururuOS installer"

[lib]
name = "rururu_hardware_detect"
path = "src/lib.rs"

[[bin]]
name = "rururu-hwdetect"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
