[package]
name = "rururu-setup-wizard"
version = "0.1.0"
edition = "2021"
authors = ["RururuOS Team"]
license = "MIT"
description = "Post-installation setup wizard for RururuOS"

[[bin]]
name = "rururu-setup"
path = "src/main.rs"

[dependencies]
iced = { version = "0.12", features = ["tokio", "advanced"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"

rururu-hardware-detect = { path = "../hardware-detect" }
rururu-workflows = { path = "../../packages/rururu-workflows" }
